_includes/manuals/1.12/3.3.1_rpm_packages.md

Foreman is packaged for the following RPM based distributions:

* RHEL and derivatives, version 6 and 7
* Fedora 24

For most users, it's highly recommended to use the [installer](manuals/{{page.version}}/index.html#3.2ForemanInstaller) as the packages only provide the software and a standalone Foreman service.  The installer installs these packages, then additionally configures Foreman to run under Apache and Passenger with PostgreSQL, plus can configure a complete Puppet setup integrated with Foreman.

#### Pre-requisites: EPEL

All RHEL and derivatives must be [subscribed to EPEL](https://fedoraproject.org/wiki/EPEL) to provide additional dependencies.  Install epel-release from [here](https://fedoraproject.org/wiki/EPEL#How_can_I_use_these_extra_packages.3F) to automatically configure it.

#### Pre-requisites: Software collections
All RHEL and derivatives require software collections from the CentOS SCLorg Special Interest Group (SIG). Foreman uses the `rh-ruby22` and `sclo-ror42` collections - the former is from RHSCL, and the latter from the SCLorg SIG.

Generally we recommend all users to use the CentOS SCLorg SIG's builds of both, which can be configured by installing the `foreman-release-scl` package from our repositories (which in turn installs the `centos-release-scl*` packages). The Foreman installer will use this package by default.

It is also possible to obtain rh-ruby22 from other sources below, but the sclo-ror42 collection is still required from the CentOS SCLorg SIG. These sources are noted only for completeness:

1. CentOS SCLo SIG: `yum install centos-release-scl` to configure from CentOS Extras, or [sclo on mirror.centos.org](http://mirror.centos.org/centos/7/sclo/x86_64/rh/) ([docs](https://wiki.centos.org/AdditionalResources/Repositories/SCL))
1. Oracle Linux: [Software Collection Library documentation](http://docs.oracle.com/cd/E37670_01/E59096/html/index.html)
1. RHEL: customers can access RHSCL as a separate repository or child channel (`rhel-server-rhscl-7-rpms`)
1. Scientific Linux: [softwarecollections on ftp.scientificlinux.org](http://ftp.scientificlinux.org/linux/scientific/6x/external_products/softwarecollections/)

#### Pre-requisites: Optional repo (RHEL only)

RHEL 6 and 7 hosts must also be subscribed to the RHEL 6/7 Optional repository or child channel in RHN.

To enable the optional repository on a RHEL 7 system using subscription-manager, run:

    yum-config-manager --enable rhel-7-server-optional-rpms

#### Pre-requisites: Puppet

Optionally, the Puppet Labs repository can be configured to obtain the latest version of Puppet available, instead of the version on EPEL.  See the [Puppet Labs Package Repositories](http://docs.puppetlabs.com/guides/puppetlabs_package_repositories.html#for-red-hat-enterprise-linux-and-derivatives) documentation on how to configure these.

#### Available repositories

Three main repos are provided at <http://yum.theforeman.org>:

* `/releases/latest` or `/releases/VERSION` (e.g. `/releases/{{page.version}}`) carries the stable releases and updates of Foreman and its dependencies.
* `/rc` carries release candidates only in the few weeks prior to a release.  Ensure after a release is made that you use the main releases repo instead.
* `/nightly` carries the latest development builds and as such, may be unstable or occasionally broken.

Under each repo are directories for each distribution, then each architecture.

#### Release packages

To set up the repository, foreman-release packages are provided which add a repo definition to `/etc/yum.repos.d`.  Install the appropriate release RPM from these lists:

    yum localinstall https://yum.theforeman.org/releases/{{page.version}}/el6/x86_64/foreman-release.rpm
    yum localinstall https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
    yum localinstall https://yum.theforeman.org/releases/{{page.version}}/f24/x86_64/foreman-release.rpm

For release candidate or nightly RPMs, change the URL as appropriate based on the above list of available repositories.

#### Signing

Release and release candidate packages are signed by the per-release key listed on [Security](security.html#GPGkeys).  Nightly packages are not signed.

#### Available packages

Install foreman and other foreman-* packages to add functionality:

    foreman               Foreman server
    foreman-proxy         Foreman Smart Proxy
    foreman-compute       Additional compute resource support for plugins
    foreman-debug         Log and debug collection tools
    foreman-ec2           Amazon EC2 provisioning support
    foreman-gce           Google Compute Engine provisioning support
    foreman-libvirt       libvirt provisioning support
    foreman-openstack     OpenStack Nova provisioning support
    foreman-ovirt         oVirt/RHEV provisioning support
    foreman-rackspace     Rackspace Cloud provisioning support
    foreman-vmware        VMware provisioning support
    foreman-cli           Foreman CLI utility
    foreman-console       Console additions
    foreman-selinux       SELinux targeted policy
    foreman-mysql2        MySQL database support
    foreman-postgresql    PostgreSQL database support
    foreman-sqlite        SQLite database support

#### Setup

1. Configure by editing `/etc/foreman/settings.yaml` and `/etc/foreman/database.yml`
1. After changing the database, migrate it: `sudo -u foreman /usr/share/foreman/extras/dbmigrate`
1. Start the foreman service or set up passenger: `service foreman start`

#### Upgrade

See [upgrade instructions](manuals/{{page.version}}/index.html#3.6Upgrade)
